<resources>
    <string name="app_name">ECommerce</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="powered_by">powered by ecommerce</string>
    <string name="ecommerce">ECommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_title">TextView</string>
    <string name="steps_represented_in_app">steps represented in app</string>
    <string name="left_arrow_desc">button to goto left page</string>
    <string name="finish">Finish</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
</resources>