<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"

        android:orientation="vertical">




        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_phone_no"
            android:inputType="phone"
            android:text="" />


        <Button
            android:id="@+id/sendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_otp"
            android:inputType="number" />


        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:background="@color/teal_200"
            android:layout_marginTop="10dp"
            android:textSize="30sp"/>




    </LinearLayout>

</layout>