<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.ViewPagerFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:layout_gravity="bottom"/>


        <ImageButton
            android:id="@+id/left_nav"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/left_arrow_desc"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <ImageButton
            android:id="@+id/right_nav"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/hello_blank_fragment"
            android:src="@drawable/ic_baseline_chevron_right_24" />


        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:text="@string/finish" />
    </FrameLayout>
</layout>

